// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update a movie when: a user does NOT enter a valid run time then: we return 'Run time must be in minutes' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Run time must be in minutes
        </li>
      </ul>
      <form action="/movies/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="Movie Title"
                   value="Point Break"
            >
          </dd>
          <dt>
            <label for="year">
              Enter the movie's year of release:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="year"
                   name="year"
                   placeholder="Release Year"
                   value="1991"
            >
          </dd>
          <dt>
            <label for="runTime">
              Enter the movie's run time:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="runTime"
                   name="runTime"
                   placeholder="Run time"
                   value="null"
            >
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Add Movie"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`update a movie when: a user does NOT enter a valid title NOR a valid year then: we return both 'Title must be between 1 and 250 characters' AND 'Year must be a 4-digit number' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Movie title must be between 1 and 250 characters
        </li>
        <li class="flash error">
          Year must be a 4-digit number
        </li>
      </ul>
      <form action="/movies/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="Movie Title"
                   value
            >
          </dd>
          <dt>
            <label for="year">
              Enter the movie's year of release:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="year"
                   name="year"
                   placeholder="Release Year"
                   value="null"
            >
          </dd>
          <dt>
            <label for="runTime">
              Enter the movie's run time:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="runTime"
                   name="runTime"
                   placeholder="Run time"
                   value="122"
            >
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Add Movie"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`update a movie when: a user does NOT enter a valid title then: we return 'Title must be between 1 and 250 characters' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Movie title must be between 1 and 250 characters
        </li>
      </ul>
      <form action="/movies/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="Movie Title"
                   value
            >
          </dd>
          <dt>
            <label for="year">
              Enter the movie's year of release:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="year"
                   name="year"
                   placeholder="Release Year"
                   value="1991"
            >
          </dd>
          <dt>
            <label for="runTime">
              Enter the movie's run time:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="runTime"
                   name="runTime"
                   placeholder="Run time"
                   value="122"
            >
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Add Movie"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`update a movie when: a user does NOT enter a valid year then: we return 'Year must be a 4-digit number' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Year must be a 4-digit number
        </li>
      </ul>
      <form action="/movies/create"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Enter the title of a new movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="Movie Title"
                   value="Point Break"
            >
          </dd>
          <dt>
            <label for="year">
              Enter the movie's year of release:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="year"
                   name="year"
                   placeholder="Release Year"
                   value="21"
            >
          </dd>
          <dt>
            <label for="runTime">
              Enter the movie's run time:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="runTime"
                   name="runTime"
                   placeholder="Run time"
                   value="122"
            >
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Add Movie"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;

exports[`update a movie when: a user wants to view the form to edit a movie then: we return the view of the form 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        <a href="/">
          The Ultimate Movie App
        </a>
      </h1>
    </header>
    <main>
      <form action="/movies/update/21"
            method="post"
      >
        <dl>
          <dt>
            <label for="title">
              Edit the title of the movie:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="title"
                   name="title"
                   placeholder="Title"
            >
          </dd>
          <dt>
            <label for="year">
              Edit the movie's year of release:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="year"
                   name="year"
                   placeholder="Release Year"
            >
          </dd>
          <dt>
            <label for="runTime">
              Edit the movie's run time:
            </label>
          </dt>
          <dd>
            <input type="text"
                   id="runTime"
                   name="runTime"
                   placeholder="Run time"
            >
          </dd>
        </dl>
        <fieldset class="actions">
          <input type="submit"
                 value="Update Movie"
          >
          <input type="reset"
                 value="Clear Form"
          >
        </fieldset>
      </form>
    </main>
  </body>
</html>
`;
